# FocusSight-AI

./: .gitignore  README.md  eye_test.py  ops_report.py  pyproject.toml  session_summary.py  setup.ps1  test_eye_test.py  test_session_summary.py
docs/: CHANGELOG.md  ROADMAP.md
extension/: README.md  background.js  generate_icons.py  manifest.json  options.html  options.js  package_extension.py  popup.html  popup.js
focussight/: __init__.py  ops_report.py  server.py  summary.py  tracker.py
tests/: test_ops_report.py  test_server.py  test_summary.py  test_tracker.py
