[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focussight-ai"
version = "0.1.0"
description = "Real-time webcam-based cognitive focus tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python==4.13.0.92",
]

[project.scripts]
focussight-tracker = "focussight.tracker:main"
focussight-summary = "focussight.summary:main"
focussight-ops-report = "focussight.ops_report:main"

[tool.setuptools]
packages = ["focussight"]
