[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focussight-ai"
version = "0.14.0"
description = "Real-time webcam-based cognitive focus tracker for students and remote workers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
focussight-track = "focussight.tracker:main"
focussight-report = "focussight.ops_report:main"

[project.urls]
"Homepage" = "https://github.com/Neil1355/FocusSight-AI"
"Bug Tracker" = "https://github.com/Neil1355/FocusSight-AI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["focussight*"]

[tool.setuptools.package-data]
focussight = ["*.xml"]
